BoLibDll/BoLibGetValues.h

DLLEXPORT int			getTargetPercentage();
DLLEXPORT bool			isDualBank();
		    
DLLEXPORT int			addCredit(int pennies);
DLLEXPORT unsigned long	getVtp(int meter);
DLLEXPORT unsigned long	getWon(int meter);
DLLEXPORT unsigned int	getHandPay(int meter);
DLLEXPORT unsigned long	getTicketsPay(int meter);
DLLEXPORT char			*getSerialNumber();
DLLEXPORT char			*getEDCTypeStr();
DLLEXPORT unsigned long	getReconciliationMeter(unsigned char offset);
DLLEXPORT unsigned int	getNumberOfGames();
DLLEXPORT unsigned int	getBoLibVersion();
//DLLEXPORT void			getRegionalValues(int index, SpanishRegional *region);
DLLEXPORT char 			*getErrorMessage(char *str, int code);
DLLEXPORT int			getUtilsRelease();
//DLLEXPORT unsigned long getTPlayMeter(unsigned char offset);
DLLEXPORT int			getUkCountryCodeB3();
DLLEXPORT int			getUkCountryCodeC();
DLLEXPORT int			getSpainCountryCode();
DLLEXPORT unsigned char getRecyclerChannel();
DLLEXPORT unsigned long getMaxHandPayThreshold();
DLLEXPORT unsigned int	getCabinetType();
DLLEXPORT unsigned char combined();
DLLEXPORT unsigned char hopper();
DLLEXPORT unsigned char printer();
DLLEXPORT unsigned int  getTerminalType();
DLLEXPORT unsigned char getTerminalFormat();
DLLEXPORT unsigned int	getUtilsAdd2CreditValue();
DLLEXPORT unsigned long getLastGameModel(int index);
DLLEXPORT unsigned long getReserveCredits();
DLLEXPORT bool			isBackOfficeAvilable();
DLLEXPORT unsigned long getWinningGameMeter(int offset, int meter);
DLLEXPORT unsigned long getHistoryLength();
DLLEXPORT char			*getLicense();
DLLEXPORT char			*getCountryCodeStrLiteral(char *str, int code);
//DLLEXPORT unsigned long getEspRegionalVariableValue(int ValueIndex);
DLLEXPORT unsigned int	getBankCreditsReservePtr();
DLLEXPORT bool			getIsHopperHopping();
DLLEXPORT bool			getUtilRequestBitState(int whichBit);
DLLEXPORT unsigned char getSmartCardGroup();
DLLEXPORT unsigned char getSmartCardSubGroup();
DLLEXPORT unsigned char getUtilsAccessLevel();
DLLEXPORT bool			getUtilDoorAccess();
DLLEXPORT bool			getUtilRefillAccess();
DLLEXPORT bool			getUtilSmartCardAccess(int whichBit);
DLLEXPORT int			getLastPayoutType();
DLLEXPORT unsigned char getSmartCardPointsRTP();
DLLEXPORT unsigned long getPartialCollectValue();
DLLEXPORT unsigned long getCashMatchMeter(unsigned char offset);
DLLEXPORT unsigned long getRewardPointMeter(unsigned char offset);
DLLEXPORT unsigned long getDemoPlayMeter(unsigned char offset);
DLLEXPORT int			getLastGameNo();
DLLEXPORT int			getGameHistory();
DLLEXPORT int			getLastWinningGameNo();
DLLEXPORT unsigned long getMaxStagePayoutValue();
DLLEXPORT unsigned int	getPromoGame(int game);